--- a/index.html
+++ b/index.html
@@ -70,73 +70,97 @@
 <body style="background-color: #508a71">
   <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <!-- Loader Start -->
-      <!-- <div class="loader" id='loader'></div> -->
+      <div class="loader" id='loader'></div>
     <!-- Loader Stop -->
 
     <!-- Content Start -->
-    <div class="card p-4" style="background-color: #83b89e;">
+    <div class="card p-4" style="background-color: #83b89e;" hidden>
       <div class="text-center m-1">
-        <img src="./assets/images/logo-rsi-only.png" class="img-fluid" style="height: 80px;" alt="Hospital logo">
+        <img src="./assets/images/logo-rsi-only.png" class="img-fluid" style="height: 80px;" alt="Hospital logo" hidden>
       </div>
-    </div>
+      <form action="#">
+        <div class="mb-2">
+          <label for="uname" class="form-label m-0" hidden><strong>Username</strong></label>
+          <input type="text" class="form-control" id="uname" aria-describedby="uname" hidden>
+        </div>
+        <div class="mb-2">
+          <label for="pw" class="form-label m-0" hidden><strong>Password</strong></label>
+          <input type="password" class="form-control" id="pw" aria-describedby="uname" hidden>
+        </div>
+        <div class="mb-2 form-check" hidden>
+          <input type="checkbox" class="form-check-input" id="showPw">
+          <label class="form-check-label" for="showPw">Show password!</label>
+        </div>
+      </form>
+      </div>
     <!-- Content Stop -->
 
-    <!-- <div class="loader" id='loader'></div> -->
-    <!-- <div class="card p-4" id='card' style="background-color: #83b89e;">
-      <div class="text-center m-1">
-        <img src="./assets/images/logo-rsi-only.png" class="img-fluid" style="height: 80px;" alt="">
-        <h2>Presensi</h2>
-      </div>
-      <form action="#" method="post" autocomplete="off"> -->
-        <!-- <div class="input-group">
-          <input type="text" class="form-control mb-2" placeholder="Username" name="username" id="username" required hidden>
-        </div>
-        <div class="input-group">
-          <input type="password" class="form-control mb-2" placeholder="Password" name="password" id="password" required hidden>
-          <div class="input-group-append mb-2" id="btneye" hidden >
-            <button type="button" class="input-group-text" onclick="pwEye()">
-              <i class="fas fa-eye"></i>
-            </button>
-          </div>
-        </div>
-        <div class="input-group" hidden>
-          <div class="input-group-prepend mb-2">
-            <span class="input-group-text">Lat</span>
-          </div>
-          <input type="text" class="form-control form-control-md mb-2" disabled id="lat" hidden>
-          <input type="text" class="form-control form-control-md mb-2" hidden id="lat1" name="lat1">
-          <input type="text" class="form-control form-control-md mb-2" hidden name="datetoday" value="<?php echo $datetoday ?>">
-          <input type="text" class="form-control form-control-md mb-2" hidden name="timenow" value="<?php echo $timenow ?>">
-          <input type="text" class="form-control form-control-md mb-2" hidden name="plc" value="<?php echo get_client_ip() ?>">
-        </div>
-        <div class="input-group" hidden>
-          <div class="input-group-prepend mb-2">
-            <span class="input-group-text">Long</span>
-          </div>
-          <input type="text" class="form-control form-control-md mb-2" hidden disabled id="long">
-          <input type="text" class="form-control form-control-md mb-2" hidden  id="long1" name="long1">
-        </div>
-        
-        
-        <div class="row">
-          <div class="col-12">
-            <div class="btn-group btn-block" data-toggle="buttons" id="klrmsk" hidden>
-              <label class="btn btn-outline-success active">
-                <input type="radio" name="options" id="option1" value="0" required> Masuk
-              </label>
-              <label class="btn btn-outline-success">
-                <input type="radio" name="options" id="option2" value="1" required> Keluar
-              </label>
-            </div>
-          </div>
-        </div>
-        <button type="submit" class="btn btn-block mt-2" hidden style="background-color: #19553E; color: white" id="btnkrm">Kirim</button> -->
-      <!-- </form>
-    </div> -->
   </div>
 
 <!-- jQuery -->
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+
+  window.onload = function () {
+    getLocation();
+  }
+
+  function getLocation() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        // Callback
+        (position) => {
+          // the coordinate
+          const lat = position.coords.latitude;
+          const long = position.coords.longitude;
+          const acc = position.coords.accuracy;
+
+          resultLoc(lat, long, acc);
+        },
+        // Callback error
+        (error) => {
+          let errorMessege = "Something wrong when get location. Try again";
+
+          switch (error.code) {
+            case error.PERMISSION_DENIED:
+              // user block geolocation permission
+              errorMessege = "You denied location permission. Loacation-based presence requires location access";
+              break;
+            case error.POSITION_UNAVAILABLE:
+              // location can't be determined (e.g. GPS is off) 
+              errorMessege = "Your information is not available. Make sure your location feature is anabled."
+              break;
+            case error.TIMEOUT:
+              // Request timed out before location was obtained
+              errorMessege = "Request time out. Please Try Again."
+              break;
+            case error.UNKNOWN_ERROR:
+              // unexpected error
+              errorMessege = "An unexpected error occurred while getting location";
+              break;
+          }
+          alert(`Gagal! ${errorMessege}`);
+          resultLoc(null, null, null, errorMessege);
+        },
+        {
+          enableHighAccuracy: true,
+          timeout: 10000,
+          maximumAge: 0
+        }
+      );
+    } else {
+      // browser does not support geolocation
+      const messege = "Your browser doesn't support Geolocation";
+      console.error(messege);
+      resultLoc(null, null, null, messege);
+    }
+  }
+
+  function resultLoc(lat, long, acc, err = null) {
+    const elementInfo = document.getElementById('loader');
+    if (!infoElement) return;
+  }
+</script>
 </body>
 </html>
